<resources>
    <string name="app_name">BancoUTN</string>
    <string name="titulo">Banco UTN Santa Fe</string>
    <string name="descripcion">Para constituir tu plazo fijo necesitamos que nos proveas algunos datos</string>
    <string name="textoBotonSimular">simular</string>
    <string name="textoBotonConstituir">constituir</string>
    <string name="textoNombre">Nombre</string>
    <string name="textoApellido">Apellido</string>
    <string name="descripcionLogo">Foto de logo UTN</string>
    <string name="textoMoneda">Moneda</string>
    <string name="tasa_nominal_anual">Tasa Nominal Anual</string>
    <string name="tasa_efectiva_anual">Tasa Efectiva Anual</string>
    <string name="capital_a_invertir">Capital a Invertir ($)</string>
    <string name="simulador_de_plazo_fijo_en_pesos">Simulador de Plazo Fijo en Pesos</string>
    <string name="confirmar">Confirmar</string>
    <string-array name="tipo_moneda">
        <item>PESOS</item>
        <item>DOLAR</item>
        <item>EURO</item>
    </string-array>
</resources>